manifests/registry/overlay/multitenancy/apicurio-envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apicurio-envoy
  labels:
    app: apicurio-envoy
spec:
  ports:
    - name: envoy-http
      port: 80
      targetPort: envoy-http
  selector:
    component: apicurio-registry
