manifests/registry/overlay/multitenancy/apicurio-envoy-route.yaml
# Routes
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: apicurio-envoy
  labels:
    app: apicurio-registry
    template: apicurio-registry
spec:
  to:
    kind: Service
    #HEY workaround here!! because of using nameSuffix: -mt
    name: apicurio-envoy-mt
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
