manifests/registry/overlay/multitenancy/tenant-manager-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tenant-manager
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: tenant-manager
    template: tenant-manager
spec:
  to:
    kind: Service
    #HEY workaround here!! because of using nameSuffix: -mt
    name: tenant-manager-mt
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
